--- a/scripts/R43_adjsut_4_transplant_severity.rmd
+++ b/scripts/R43_adjsut_4_transplant_severity.rmd
@@ -165,6 +165,8 @@ rm_pt_num %>% nrow
 rm_samples_num <- meta %>% filter(pid %in% rm_pt_num$pid) 
 ```
 
+## running model 
+
 ```{r}
 all_food_vars <- meta_CI %>% select(starts_with('fg')) %>% colnames()
 
@@ -404,13 +406,166 @@ association_gt_table <- pairwise_associations %>%
 
 # --- Display the Final Table ---
 association_gt_table
-
-
 ```
 
 # cancer type (disease)
 
 ```{r}
-df_pt_stool %>% count(disease_simple, sort = T)
+df_pt_stool_grouped <- df_pt_stool %>% 
+  # Create a new column 'disease_lineage' based on the 'disease_simple' column.
+  mutate(
+    disease_lineage = case_when(
+      # If the disease is in this list, classify it as 'Myeloid'.
+      disease_simple %in% c("AML", "MDS/MPN", "CML") ~ "Myeloid",
+      
+      # If it's in this list, classify it as 'Lymphoid'.
+      disease_simple %in% c("NHL", "ALL", "Myeloma", "CLL", "Hodgkins") ~ "Lymphoid",
+      
+      # For any other disease (like 'AA' or 'other'), assign NA.
+      TRUE ~ NA_character_
+    )
+  ) %>%
+  # Remove the rows where 'disease_lineage' is NA.
+  # This cleanly excludes the patients you don't want in this specific analysis.
+  filter(!is.na(disease_lineage))
 ```
 
+```{r}
+meta_disease <- meta %>% 
+  inner_join(df_pt_stool_grouped %>% select(pid, disease_simple, disease_lineage)) %>% 
+  mutate(disease_lineage = factor(disease_lineage))
+
+# how many samples from how many patients are removed 
+rm_pt_num <- df_pt_stool  %>% filter(disease_simple %in% c('AA','other')) 
+rm_pt_num %>% nrow
+
+rm_samples_num <- meta %>% filter(pid %in% rm_pt_num$pid) 
+rm_samples_num %>% nrow
+```
+
+## running model 
+
+```{r}
+all_food_vars <- meta_disease %>% select(starts_with('fg')) %>% colnames()
+
+# Create the interaction terms for all food variables in this iteration
+interaction_terms <- paste(all_food_vars, "empirical", sep = ":")
+
+# Build the full formula string dynamically
+formula_string <- paste(
+  "log(simpson_reciprocal) ~ 0 + intensity + empirical + TPN + EN + disease_lineage +",
+  paste(interaction_terms, collapse = " + "),
+  "+ (1 | pid) + (1 | timebin)"
+)
+
+# Convert the string to a formula object
+formula <- brms::bf(as.formula(formula_string))
+
+# Build the priors by adding them together.
+# This single prior() call applies to all coefficients listed in `all_food_coefs`.
+priors <-
+    prior(normal(0, 1), class = 'b') + # General prior for all food effects
+    # Specific priors that override the general one for non-food covariates
+    prior(normal(0, 0.1), class = 'b', coef = "TPNTRUE") +
+    prior(normal(0, 0.1), class = 'b', coef = "ENTRUE") +
+    prior(normal(0, 0.5), class = 'b', coef = "empiricalTRUE") +
+    prior(normal(2, .1), class = 'b', coef = "intensityablative") +
+    prior(normal(2, .1), class = 'b', coef = "intensityreduced") +
+    prior(normal(2, .1), class = 'b', coef = "intensitynonablative")
+
+#Fit the model (using fewer iterations for this example to run quickly)
+model_fit <- brm(
+  formula = formula,
+  data = meta_disease,
+  prior = priors,
+    warmup = 1000, iter = 3000,
+    chains = 4, cores = 4,
+    seed = 123,
+    silent = 2,
+  control = list(adapt_delta = 0.99)
+)
+
+results_df_disease <- tidy(model_fit, conf.int = TRUE) %>%
+  mutate(conf.low = round(conf.low, 2),
+         conf.high = round(conf.high, 2))
+```
+
+## forest figure 
+
+```{r}
+# the above figure but make it the way the other figure look like
+key <- read_csv('../data/food_group_color_key_final.csv', col_types = 'ccccc')
+
+replacement_dictionary <- setNames(key$shortname, key$fg1_name)
+
+level_order <- rev(c(
+    "abx", "EN", "TPN", "disease lineageMyeloid",
+    "abx * Sweets", "Sweets",
+    "abx * Grains", "Grains",
+    "abx * Milk", "Milk",
+    "abx * Eggs", "Eggs",
+    "abx * Legumes", "Legumes",
+    "abx * Meats", "Meats",
+    "abx * Fruits", "Fruits",
+    "abx * Oils", "Oils",
+    "abx * Vegetables", "Vegetables"
+))
+
+cleaned_effects <- results_df_disease %>%
+  # Keep only the fixed effects
+  filter(effect == "fixed") %>%
+  # Create a new column to distinguish main effects from interactions
+  mutate(
+    effect_type = if_else(str_detect(term, ":"), "Interaction", "Main Effect"),
+    # Create clean labels for plotting
+    clean_term = term %>%
+      str_replace("empiricalTRUE$", "abx") %>%
+      str_remove_all("empiricalFALSE:|avg_intake_|TRUE$") %>%
+      str_replace_all( replacement_dictionary) %>%
+      str_replace("empiricalTRUE:", "abx * ") %>%
+      str_replace_all("_", " ")
+  ) %>%
+  filter(!str_detect(clean_term, 'intensity')) %>%
+  # Create a new column to identify significant results
+  # The condition is TRUE if conf.low and conf.high have the same sign (i.e., don't cross zero)
+  mutate(is_significant = (conf.low * conf.high) >= 0) %>%
+  mutate(clean_term = factor(clean_term, levels = level_order))
+
+shading_df <- cleaned_effects %>%
+  mutate(y_numeric = as.numeric(clean_term)) %>%
+  filter(str_detect(clean_term, "\\*")) # Filter for interaction terms
+
+plot_disease <- ggplot(cleaned_effects, aes(x = estimate, y = clean_term)) +
+  geom_rect(
+    data = shading_df,
+    aes(ymin = y_numeric - 0.5, ymax = y_numeric + 0.5, xmin = -Inf, xmax = Inf),
+    fill = "#FBEADC", # A light orange/peach color like the example
+    alpha = 0.7,
+    inherit.aes = FALSE
+   ) +
+   # Add a vertical line at zero, which represents "no effect"
+  geom_vline(xintercept = 0, linetype = "solid", color = "blue",size = 0.8) +
+   # Use geom_pointrange to show the estimate (point) and confidence interval (line)
+   geom_pointrange(
+   aes(xmin = conf.low, xmax = conf.high, color = is_significant),
+     size = 0.25,linewidth = 1,
+  ) +
+  scale_color_manual(
+    values = c(
+      "TRUE" = "red",
+      "FALSE" = "black"
+    ), name = "Effect Status" # Legend title
+  ) +
+  scale_y_discrete( labels = function(x) { ifelse(str_detect(x, '\\*'),  str_glue("<b style='color:royalblue'>{x}</b>"), as.character(x)) }) +
+  # Add labels and a clean theme
+  labs(
+    x = "ln(diversity) change",
+    title = "Predictor effects on diversity",
+    subtitle = "Sensitivity Analysis:\nControl for disease lineage - Myeloid or Lymphoid",
+    y = ''
+  ) +
+  theme_classic(base_size = 11) +
+  theme(legend.position = "none", axis.text.y = element_markdown())
+
+plot_disease
+```
